changed the module to handle SQL memory, returned the docs and release directories. and the database itself, of course. Needed to make the project on maven in order to use SQL (didn't want to use only the jar of SQL, this is way more comfortable because it has another things to offer).